--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
           # Visit https://soos.io to get the required tokens to leverage SOOS scanning/analysis services
           SOOS_CLIENT_ID: ${{ secrets.SOOS_CLIENT_ID }}
           SOOS_API_KEY: ${{ secrets.SOOS_API_KEY }}
+          SOOS_GITHUB_PAT: ${{ secrets.SOOS_GITHUB_PAT }}
