--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,8 @@ jobs:
           branch_name: ${{ github.ref }}
           commit_hash: ${{ github.sha }}
           sarif: true
-          gpat: ${{ secrets.SOOS_GITHUB_PAT }}
+          gpat: ${{ secrets.SOOS_GPAT }}
         env:
           # Visit https://soos.io to get the required tokens to leverage SOOS scanning/analysis services
           SOOS_CLIENT_ID: ${{ secrets.SOOS_CLIENT_ID }}
           SOOS_API_KEY: ${{ secrets.SOOS_API_KEY }}
-          SOOS_GITHUB_PAT: ${{ secrets.SOOS_GITHUB_PAT }}
