--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: soos-io/soos-sca-github-action@v1.0.3-beta
+      - uses: soos-io/soos-sca-github-action@v1.0.4
         name: SOOS SCA Scan
         with:
           project_name: ${{ github.repository }}
