--- a/.github/workflows/soos-dast-scan.yml
+++ b/.github/workflows/soos-dast-scan.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           client_id: ${{ secrets.SOOS_CLIENT_ID }}
           api_key: ${{ secrets.SOOS_API_KEY }}
-          project_name: "<YOUR-PROJECT-NAME>"
+          project_name: "my-python-app"
           scan_mode: "baseline"
           target_url: "https://brokencrystals.com/"
           output_format: "sarif"
